<resources>
    <string name="app_name">Taxwale</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="gst_test"> <![CDATA[Upload your from 16 & income tax return yourself in just 5 minutes]]> </string>
    <string name="itr_test"> <![CDATA[Get a CA to file your income tax return for all kinds of income]]> </string>
    <string name="business_test"> <![CDATA[(P&L, Balance Sheet etc]]> </string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="accounting">Accounting</string>
    <string name="trademark">Trademark</string>
    <string name="tax">Tax</string>
    <string name="dsc">DSC</string>
    <string name="consulting">Consulting</string>
    <string name="Status">status</string>
    <string name="welcome_notic"> <![CDATA[TAXWALE offers taxation & financial solutions od individuals, businesses, organization & chartered accountants in india]]> </string>
    <string name="already_users">Already have an account?</string>
    <string name="minimum_txt">  *Min 200 words </string>
    <string name="sent">Sent </string>
  <string name="video_tutorials">Video Tutorials </string>
    <string name="received">Received </string>
    <string name="edit_profile">Edit Profile </string>
    <string name="raise_tickets">Raise New Query/Ticket</string>
    <string name="pan_number">Pan Number </string>
    <string name="aadhar_number">Aadhar Number </string>
    <string name="gst_number">GST Number </string>
    <string name="verify">Verify </string>
    <string name="enter_gst_number">Please enter correct GST number </string>
    <string name="location">Location </string>
    <string name="feed">Feed </string>
    <string name="pay_tax">Pay Tax </string>
    <string name="you_can_pay_amount_through_different">You can pay amount through different payment methods and upload payment screenshot here to verify </string>
    <string name="you_can_pay_amount_through_challan">You can pay amount through challan and upload challan receipt here to verify your payment </string>
    <string name="online_pay">Online Pay</string>
    <string name="upload_online_paid_screenshot_or_receipt">Upload Online Paid Screenshot or receipt here to verify your payment </string>
    <string name="take_screenshot_or_save_payment_details">Take Screenshot or save payment Details</string>
    <string name="view_payment_method">View Payment Method </string>
    <string name="pay_online_through">Pay online through UPI ID, QR Code,\nBank Account Details etc</string>
    <string name="your_query_here">Enter Your Query .... </string>
    <string name="my_doucment">My Documents </string>
    <string name="doucment_history"> Document History </string>
    <string name="my_doucment2">My\n Documents </string>
    <string name="receive_doucment">Recived\n Documents </string>
    <string name="send_doucment">Sent\n Documents </string>
    <string name="Permission_Granted">Permission Granted</string>
    <string name="Permission_Denied">Permission Denied</string>
    <string name="NOCONN">Please check your internet connection.</string>
    <string name="termcondition"><![CDATA[Term & Condition]]></string>
    <string name="biometric_negative_button_text">Cancel</string>
    <string name="biometric_title">Verify your identity</string>
    <string name="biometric_subtitle">Verify your identity</string>
    <string name="biometric_description">Taxwale wants to verify its you</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="your_account_manager">Your Account Manager</string>
    <string name="service_provider_name">Service Provider Name</string>
    <string name="verified">Verified</string>
    <string name="send_document">Send Documents</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="write_a_review">Write a Review</string>
    <string name="message_review">Reviews are public and editable. Past edits are visible\nto the developer and users unless you delete your\nreview  altogether.</string>
    <string name="add_new_address">Add New Address</string>
    <string name="gps">GPS</string>
    <string name="use_location_for_add_address">Use Current Location to add  new addres</string>
    <string name="new_address">New Address</string>
    <string name="address">Address</string>
    <string name="enter_new_address">Enter Your Address</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="state">State</string>
    <string name="select_state">Select State</string>
    <string name="pincode">Pincode</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save_address">Save Address</string>
    <string name="my_address">My Address</string>
    <string name="cange_password">Change password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="your_query">Your Query</string>
    <string name="delete">Delete</string>
    <string name="solved">Solved</string>
    <string name="submit">Submit</string>
    <string name="enter_currect_details">*enter your correct details for verifying your GST number*</string>
    <string name="verify_the_tax_GST_account">Verify the Tax GST Account </string>
    <string name="upload_clear_photo">Please upload clear photo / documents\n as shown</string>
    <string name="please_select_month">Please Select Month</string>
    <string name="status">Status:</string>
    <string name="problem_query_msg">Problem query message ..........</string>
    <string name="ticket_number">Ticket Number   :  </string>
    <string name="file_upload_successfully">File Uploaded Successfully</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_txt">Add your details and send OTP to sign up</string>
    <string name="country_code">+91-</string>
    <string name="dont_receive">Didn\'t Receive?</string>
    <string name="profile">Profile</string>
    <string name="address2">Address</string>
    <string name="step_1">Step 1:</string>
    <string name="step_2">Step 2:</string>
    <string name="step_3">Step 3:</string>
    <string name="step_4">Step 4:</string>
    <string name="download_challan">Download Challan PDF form</string>
    <string name="point_out_challan">Point out the Challan form and fill the Form currectly</string>
    <string name="after_filling_challan">After filling Challan currectly > Go to your nearest bank and submit the form with amount > Get receipt</string>
    <string name="upload_challan_receipt">Upload Challan receipt here to verify your payment</string>
    <string name="please_browse_file_to_upload">Please browse file to upload\n online pay receipt</string>
    <string name="send_otp">Send OTP</string>
    <string name="browse_file">Browse file</string>
    <string name="manual_pay_channal">Manual pay : Challan</string>
    <string name="step_to_upload_challan">Step to upload challan Receipt here :</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="change">CHANGE</string>
    <string name="kyc_details">KYC Details</string>
    <string name="gst_tf">DJGH***TF</string>
    <string name="your_agent_service_provider">Your Agent/Service Provider</string>
    <string name="touch_id_lock_off">Touch ID Lock Off</string>
    <string name="address_details">Address Details</string>
    <string name="total_price">Total price</string>
    <string name="total_amount">Total amount</string>
    <string name="discription">Discription</string>
    <string name="today">Today</string>
    <string name="faq">FAQ</string>
    <string name="help_center">Help Center</string>
    <string name="defaul">Default</string>
    <string name="price_details">Pricing Details</string>
    <string name="day_trial">30 day trial</string>
    <string name="select_language">Select Your Language</string>
    <string name="select_language_hindi">अपनी भाषा चुनें</string>
    <string name="hindi">Hindi (हिंदी)</string>
    <string name="english">English</string>
    <string name="thanku">Thank you</string>
    <string name="ok">Ok</string>
    <string name="min_words">*Min 200 words</string>
    <string name="rupee_symble">₹</string>
    <string name="request_cancel">Request Cancellation</string>
    <string name="comment_option">Comment (Option)</string>
    <string name="submit_request">Submit Request</string>
    <string name="change_reminder">if you cancel now, you may not be able to avail this deal again, Do you still want to cancel? </string>
    <string name="dontcancel">Don\'t cancel</string>
    <string name="fullname">Full Name</string>
    <string name="landmark">Landmark</string>
    <string name="enter_house_number">Enter house number</string>
    <string name="enter_address">Enter Address</string>
    <string name="your_state">Your State</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="email">Email</string>
    <string name="dob">Date Of Birth</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_dob">Enter your DOB</string>
    <string name="cancel">Cancel</string>
    <string name="need_help">Need Help?</string>
    <string name="name_txt">Name</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="months">Months</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="loginlongtext">"Please enter your registered mobile number to receive a OTP for Login your account"</string>
    <string name="Sendotp">Send OTP</string>
    <string name="loginwith">or Log in with</string>
    <string name="doyouhaveac">Don\'t have an account?</string>
    <string name="signup2">Sign Up</string>
    <string name="help">Help</string>
    <string name="otplongtext">We have sent an OTP to \n your Mobile</string>
    <string name="otplongtext2">"Please check your mobile number 071*****88 \ncontinue to Login "</string>
    <string name="login2">Log In</string>
    <string name="didntrecive">Didn\'t Receive?</string>
    <string name="click">Click Here</string>
    <string name="points">"Points "</string>
    <string name="balance">Balance</string>
    <string name="Seeall">See all</string>
    <string name="transaction">Transactions</string>
    <string name="add_bill">Add Bill</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="messege">Message</string>
    <string name="more">More</string>
    <string name="reviews">Reviews</string>
    <string name="seemorerecipi">See more Receipes</string>
    <string name="Yourfeedback">Your Feedback</string>
    <string name="sendnow">Send Now</string>
    <string name="allwinner">All Winners</string>
    <string name="language">Language</string>
    <string name="Sendfeedback">Send Feedback</string>
    <string name="Aadhar">Aadhar</string>
    <string name="Contactus">Contact Us</string>
    <string name="sendquery">Send Query</string>
    <string name="about">About</string>
    <string name="Privacy">Privacy Policies</string>
    <string name="logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="Today">Today</string>
    <string name="Earlier">Earlier Notification</string>
    <string name="homeaddress">Home Address</string>
</resources>