<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ManualPayChallanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixtydp"
            android:background="@color/green"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                app:tint="@color/white"
                android:onClick="back"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/seguisb"
                android:singleLine="true"
                android:text="@string/manual_pay_channal"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteensp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/_20sdp">

                <TextView
                    android:id="@+id/txt_irt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableRight="@drawable/ic_download_form"
                    android:text="@string/manual_pay_channal"
                    android:textColor="@color/theme"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/step_to_upload_challan"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/step_1"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/download_challan"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/step_2"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/point_out_challan"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/step_3"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/after_filling_challan"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/step_4"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/upload_challan_receipt"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_100sdp"
                    android:background="@drawable/borderline_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:src="@drawable/ic_check_true_image"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_browse_file_to_upload"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="italic"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/gradientcurved"
                            android:fontFamily="@font/metropolis_regular"
                            android:gravity="center"
                            android:paddingLeft="@dimen/_20sdp"
                            android:paddingRight="@dimen/_20sdp"
                            android:paddingTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/browse_file"
                            android:textColor="@color/white"
                            android:textSize="14sp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>





    </LinearLayout>

</RelativeLayout>