<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".Activity.WelcomeActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/ic_taxwale_logo_splash" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_welcome_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_welcome"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/welcome_notic"
        android:textColor="@color/white"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/segoeui"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingRight="@dimen/_40sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_alreadyUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_next"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/already_users"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_alreadyUsers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/white_btn_background"
        android:fontFamily="@font/segoeui"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingRight="@dimen/_40sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</RelativeLayout>