<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/query_back"
    android:padding="@dimen/_6sdp"
   android:layout_marginTop="@dimen/_10sdp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_marginRight="@dimen/_5sdp"
        android:textSize="12sp"
        android:text="Date: 19-06-2021"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/ticket_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:textSize="12sp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:background="@drawable/white_background"
            android:textColor="@color/font_color"
            android:text="1234567890"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="12sp"
        android:textColor="@color/font_color"
        android:text="@string/problem_query_msg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="right"
        android:layout_marginTop="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:textSize="12sp"
            android:textColor="@color/font_color"
            android:text="@string/status"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:textSize="12sp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_1sdp"
            android:paddingBottom="@dimen/_1sdp"
            android:background="@drawable/white_background"
            android:textColor="@color/blue"
            android:text="@string/solved"/>

    </LinearLayout>

</LinearLayout>